--- a/blank.html
+++ b/blank.html
@@ -25,14 +25,7 @@
             <li><a href="blank.html">Контакты</a></li>
           </ul>
           <div class="user-navigation">
-            <a class="cart-link" href="blank.html">
-              <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
-                <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
-                <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
-              </svg>
-              <span>Корзина</span>
-            </a>
+            <a class="cart-link" href="blank.html">Корзина</a>
           </div>
         </div>
       </nav>
@@ -42,34 +35,38 @@
   </main>
   <footer class="main-footer">
     <section class="footer-contacts">
-      <h2>Как нас найти</h2>
-      <div>
-        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
+      <h2 class="visually-hidden">Как нас найти</h2>
+      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
+      <div class="container">
+      <div class="footer-contacts-wrapper">
+        <div class="footer-contacts-box">
+          <h3 class="footer-contacts-heading">Nёrds design studio</h3>
+          <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+          <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <button class="button footer-button" type="button">Напишите нам</button>
+        </div>
       </div>
-      <div class="footer-contacts-box">
-        <h3>Nёrds design studio</h3>
-        <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-        <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-        <button class="button footer-button" type="button">Напишите нам</button>
       </div>
     </section>
-    <section class="footer-social">
-      <h2>Мы в соцсетях</h2>
-      <div class="footer-social-box">
-        <strong>Давайте дружить, это выгодно!</strong>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
-      </div>
-      <ul>
-        <li>
-          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
-        </li>
-      </ul>
+    <section class="footer-social container">
+      <h2 class="visually-hidden">Мы в соцсетях</h2>
+        <div class="footer-social-box">
+          <strong>Давайте дружить, это выгодно!</strong>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+        <div class="footer-social-icons">
+          <ul class="footer-social-list">
+            <li>
+              <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
+            </li>
+            <li>
+              <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
+            </li>
+            <li>
+              <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
+            </li>
+          </ul>
+        </div>
     </section>
   </footer>
   <section class="modal-feedback">
@@ -77,9 +74,9 @@
     <form action="https://echo.htmlacademy.ru" method="post">
       <p class="modal-part-one">
         <label for="feedback-name">Ваше имя:</label>
-        <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="feedback-input" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
         <label for="feedback-email">Ваш email:</label>
-        <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
+        <input class="feedback-input" id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
       <p class="modal-part-two">
         <label for="feedback-message">Текст письма:</label>
@@ -91,4 +88,3 @@
   </section>
   </body>
 </html>
-
