--- a/catalog.html
+++ b/catalog.html
@@ -26,14 +26,7 @@
               <li><a href="blank.html">Контакты</a></li>
             </ul>
             <div class="user-navigation">
-              <a class="cart-link" href="blank.html">
-                <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="#A6A6A6"/>
-                  <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="#A6A6A6"/>
-                  <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="#A6A6A6"/>
-                </svg>
-                <span>Корзина</span>
-              </a>
+              <a class="cart-link" href="blank.html">Корзина</a>
             </div>
           </div>
         </div>
@@ -49,54 +42,62 @@
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset class="filter-price">
             <legend class="filter-type">Стоимость:</legend>
-            <div>
-              <input type="range" min="1" max="100" value="70" class="slider" id="price">
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="toggle toggle-min" tabindex="0"></div>
+                <div class="toggle toggle-max" tabindex="0"></div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">
+                  от <input type="number" name="min-price" value="0">
+                </label>
+                <label class="max-price">
+                  до <input type="number" name="max-price" value="15000">
+                </label>
+              </div>
             </div>
-            <p>
-              <label for="filter-price-min">От</label>
-              <input id="filter-price-min" type="text" name="price-min" placeholder="0">
-              <label for="filter-price-max">До</label>
-              <input id="filter-price-max" type="text" name="price-max" placeholder="15000">
-            </p>
           </fieldset>
           <fieldset class="filter-grids">
             <legend class="filter-type">Сетка:</legend>
             <ul class="filter-grids-list">
-              <li>
-                <input class="filter-input-radio" type="radio" name="grid" id="filter-adaptive" checked>
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-adaptive" checked>
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
-              <li>
-                <input class="filter-input-radio" type="radio" name="grid" id="filter-fixed">
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-fixed">
                 <label for="filter-fixed">Фиксированная</label>
               </li>
-              <li>
-                <input class="filter-input-radio" type="radio" name="grid" id="filter-rubber">
+              <li class="filter-option filter-radio">
+                <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="filter-rubber">
                 <label for="filter-rubber">Резиновая сетка</label>
               </li>
             </ul>
           </fieldset>
           <fieldset class="filter-options">
             <legend class="filter-type">Особенности:</legend>
-            <ul>
+            <ul class="filter-options-list">
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider" checked>
                 <label for="filter-slider">Слайдер</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="advantage" id="filter-advantage">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="advantage" id="filter-advantage">
                 <label for="filter-advantage">Блок преимуществ</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
                 <label for="filter-news">Новости</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
                 <label for="filter-gallery">Галерея</label>
               </li>
               <li class="filter-option filter-checkbox">
-                <input class="filter-input-checkbox filter-input" type="checkbox" name="basket" id="filter-basket">
+                <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="basket" id="filter-basket">
                 <label for="filter-basket">Корзина</label>
               </li>
             </ul>
@@ -106,76 +107,84 @@
       </section>
       <section class="catalog">
         <h2 class="visually-hidden">Список готовых шаблонов</h2>
-        <p class="catalog-filter">Сортировать:</p>
-        <ul class="catalog-filter-one">
-          <li><a class="filter-one-current" href="">По цене</a></li>
-          <li><a href="">По типу</a></li>
-          <li><a href="">По названию</a></li>
-        </ul>
-        <ul class="catalog-filter-two">
-          <li><a class="filter-two-current" href="">По убыванию</a></li>
-          <li><a href="">По возрастанию</a></li>
-        </ul>
+        <div class="catalog-sorting">
+          <p class="catalog-sorting-title">Сортировать:</p>
+          <ul class="sorting-list">
+            <li class="sorting-item current-item"><a href="">По цене</a></li>
+            <li class="sorting-item"><a href="">По типу</a></li>
+            <li class="sorting-item"><a href="">По названию</a></li>
+          </ul>
+          <ul class="sorting-range">
+            <li><a class="sorting-range-item-one sorting-range-current" href=""><span class="visually-hidden">По убыванию</span></a></li>
+            <li><a class="sorting-range-item-two" href=""><span class="visually-hidden">По возрастанию</span></a></li>
+          </ul>
+        </div>
         <ul class="catalog-list">
-        <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-sedona.jpg" width="359" height="578" alt="Готовый шаблон «SEDONA»">
-              </p>
-              <h3 class="catalog-item-title">Sedona</h3>
-            </a>
-            <p class="catalog-description">Информационный сайт <br>для туристов</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+          <li class="catalog-item">
+            <h3 class="visually-hidden">Готовый шаблон «SEDONA»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-sedona.jpg" width="358" height="578" alt="Готовый шаблон «SEDONA»">
+            </div>
+            <div class="catalog-wrap catalog-item-hovered">
+              <a class="catalog-item-title" href="blank.html">Sedona</a>
+              <p class="catalog-description">Информационный сайт <br>для туристов</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
           <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
-              </p>
-              <h3 class="catalog-item-title">Pink App</h3>
-            </a>
-            <p class="catalog-description">Продуктовый лендинг <br>приложения для iOS и Android</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+            <h3 class="visually-hidden">Готовый шаблон «PINK APP»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-pink.jpg" width="358" height="578" alt="Готовый шаблон «PINK APP»">
+            </div>
+            <div class="catalog-wrap">
+              <a class="catalog-item-title" href="blank.html">Pink App</a>
+              <p class="catalog-description">Продуктовый лендинг <br>приложения для iOS и Android</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
           <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
-              </p>
-              <h3 class="catalog-item-title">Barbershop</h3>
-            </a>
-            <p class="catalog-description">Сайт салона красоты. <br>Для мужчин, да.</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+            <h3 class="visually-hidden">Готовый шаблон «BARBERSHOP»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-barbershop.jpg" width="358" height="578" alt="Готовый шаблон «BARBERSHOP»">
+            </div>
+            <div class="catalog-wrap">
+              <a class="catalog-item-title" href="blank.html">Barbershop</a>
+              <p class="catalog-description">Сайт салона красоты. <br>Для мужчин, да.</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
           <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-mishka.jpg" width="359" height="578" alt="Готовый шаблон «MISHKA»">
-              </p>
-              <h3 class="catalog-item-title">Mishka</h3>
-            </a>
-            <p class="catalog-description">Интернет-магазин <br>вязаных игрушек</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+            <h3 class="visually-hidden">Готовый шаблон «MISHKA»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-mishka.jpg" width="358" height="578" alt="Готовый шаблон «MISHKA»">
+            </div>
+            <div class="catalog-wrap">
+              <a class="catalog-item-title" href="blank.html">Mishka</a>
+              <p class="catalog-description">Интернет-магазин <br>вязаных игрушек</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
           <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-aplus.jpg" width="359" height="578" alt="Готовый шаблон «A PLUS»">
-              </p>
-              <h3 class="catalog-item-title">A plus</h3>
-            </a>
-            <p class="catalog-description">Лендинг курсов повышения <br>квалификации</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+            <h3 class="visually-hidden">Готовый шаблон «A PLUS»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-aplus.jpg" width="358" height="578" alt="Готовый шаблон «A PLUS»">
+            </div>
+            <div class="catalog-wrap">
+              <a class="catalog-item-title" href="blank.html">A plus</a>
+              <p class="catalog-description">Лендинг курсов повышения <br>квалификации</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
           <li class="catalog-item">
-            <a href="blank.html">
-              <p class="catalog-item-image">
-                <img src="img/products/img-kvast.jpg" width="359" height="578" alt="Готовый шаблон «КВАСТ»">
-              </p>
-              <h3 class="catalog-item-title">КВАСТ</h3>
-            </a>
-            <p class="catalog-description">Промо-сайт производителя <br>крафтового кваса</p>
-            <a class="button button-price" href="">9 900 &#8381;</a>
+            <h3 class="visually-hidden">Готовый шаблон «КВАСТ»</h3>
+            <div class="catalog-item-image">
+              <img src="img/products/img-kvast.jpg" width="358" height="578" alt="Готовый шаблон «КВАСТ»">
+            </div>
+            <div class="catalog-wrap">
+              <a class="catalog-item-title" href="blank.html">КВАСТ</a>
+              <p class="catalog-description">Промо-сайт производителя <br>крафтового кваса</p>
+              <a class="button button-price" href="">9 900 &#8381;</a>
+            </div>
           </li>
         </ul>
         <ol class="pagination-list">
@@ -199,33 +208,37 @@
   <footer class="main-footer">
     <section class="footer-contacts">
       <h2 class="visually-hidden">Как нас найти</h2>
-      <div>
-        <img class="footer-map" src="img/map-and-marker.jpg" width="1440" height="416" alt="Карта">
+      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
+      <div class="container">
+      <div class="footer-contacts-wrapper">
+        <div class="footer-contacts-box">
+          <h3 class="footer-contacts-heading">Nёrds design studio</h3>
+          <p class="footer-contacts-address"><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
+          <p class="footer-contacts-phone"><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <button class="button footer-button" type="button">Напишите нам</button>
+        </div>
       </div>
-      <div class="footer-contacts-box">
-        <h3>Nёrds design studio</h3>
-        <p><a class="footer-address" href="blank.html">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</a></p>
-        <p><a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-        <button class="button footer-button" type="button">Напишите нам</button>
       </div>
     </section>
     <section class="footer-social container">
       <h2 class="visually-hidden">Мы в соцсетях</h2>
-      <div class="footer-social-box">
-        <strong>Давайте дружить, это выгодно!</strong>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
-      </div>
-      <ul>
-        <li>
-          <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
-        </li>
-      </ul>
+        <div class="footer-social-box">
+          <strong>Давайте дружить, это выгодно!</strong>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+        <div class="footer-social-icons">
+          <ul class="footer-social-list">
+            <li>
+              <a class="social-button" href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="Логотип Вконтакте"><span class="social-button-name">Вконтакте</span></a>
+            </li>
+            <li>
+              <a class="social-button" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Логотип Facebook"><span class="social-button-name">Фейсбук</span></a>
+            </li>
+            <li>
+              <a class="social-button" href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Логотип Instagram"><span class="social-button-name">Инстаграм</span></a>
+            </li>
+          </ul>
+        </div>
     </section>
   </footer>
   <section class="modal-feedback">
@@ -233,9 +246,9 @@
     <form action="https://echo.htmlacademy.ru" method="post">
       <p class="modal-part-one">
         <label for="feedback-name">Ваше имя:</label>
-        <input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
+        <input class="feedback-input" id="feedback-name" type="text" name="name" placeholder="Имя Фамилия">
         <label for="feedback-email">Ваш email:</label>
-        <input id="feedback-email" type="email" name="email" placeholder="email@example.com">
+        <input class="feedback-input" id="feedback-email" type="email" name="email" placeholder="email@example.com">
       </p>
       <p class="modal-part-two">
         <label for="feedback-message">Текст письма:</label>
@@ -247,4 +260,3 @@
   </section>
   </body>
 </html>
-
