--- a/blank.html
+++ b/blank.html
@@ -36,7 +36,8 @@
   <footer class="main-footer">
     <section class="footer-contacts">
       <h2 class="visually-hidden">Как нас найти</h2>
-      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
+      <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+      width="1200" height="416" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
       <div class="container">
       <div class="footer-contacts-wrapper">
         <div class="footer-contacts-box">
