--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <td>100<sup>%</sup></td>
                 <td>50<sup>%</sup></td>
               </tr>
-              <tr>
+              <tr class="about-table-row-two">
                 <td>Уровень <br>самоотдачи</td>
                 <td>Соблюдение <br>сроков</td>
                 <td>Минимальная <br>предоплата</td>
@@ -142,7 +142,7 @@
         <ul class="partners-list">
           <li class="partners-item">
             <a class="partners-link" href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/partners/html-academy-logo.svg" width="199" height="68" alt="Логотип HTML Academy">
+              <img src="img/partners/html-academy-logo.png" width="199" height="81" alt="Логотип HTML Academy">
             </a>
           </li>
           <li class="partners-item">
@@ -157,7 +157,7 @@
           </li>
           <li class="partners-item">
             <a class="partners-link" href="blank.html">
-              <img src="img/partners/mishka-logo.png" width="173" height="84" alt="Логотип MISHKA">
+              <img src="img/partners/mishka-logo.png" width="173" height="91" alt="Логотип MISHKA">
             </a>
           </li>
         </ul>
@@ -167,7 +167,8 @@
   <footer class="main-footer">
     <section class="footer-contacts">
       <h2 class="visually-hidden">Как нас найти</h2>
-      <img class="footer-map" src="img/map-and-marker.jpg" width="1200" height="416" alt="Карта">
+      <iframe class="footer-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+      width="1200" height="416" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
       <div class="container">
       <div class="footer-contacts-wrapper">
         <div class="footer-contacts-box">
