--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       </p>
       <p class="modal-item modal-message">
         <label for="feedback-message">Текст письма:</label>
-        <textarea id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
+        <textarea class="feedback-message-text" id="feedback-message" rows="10" cols="45" name="text" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button button-feedback" type="submit">Отправить</button>
     </form>
